Fixed logo on mobile first, now have the correct position, improved layout mobile first for complaint new, improved btn-claim button

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -34,9 +34,9 @@
 /* Logo */
 .navbar-wagon-brand img {
   height: 50px;
-  margin-left: 60px;
+  margin-left: 20px;
   @media screen and (max-width: $small) {
-  margin-left: 0;
+  margin-left: -15px;
   }
 }
 
@@ -64,7 +64,7 @@
 .navbar-wagon-link {
   color: white;
   font-size: 15px;
-  border: 2px solid white;
+  border: 2px solid $brand-primary;
   background: $brand-primary;
   padding: 5px 10px;
   margin: 0 10px;
@@ -74,7 +74,7 @@
     font-size: 15px;
     text-decoration: none;
     background: white;
-
+    border: 2px solid $brand-primary;
   }
 }
 
