--- a/app/assets/stylesheets/components/_search.scss
+++ b/app/assets/stylesheets/components/_search.scss
@@ -4,7 +4,7 @@
   color: black;
   margin: 0 auto;
   font-size: 15px;
-  background: #E6E6E6;
+  background: white;
   &:focus {
     background: white;
   }
